--- a/Heart-up/MyShabonCollectionViewCell/MyShabonCollectionViewCell.xib
+++ b/Heart-up/MyShabonCollectionViewCell/MyShabonCollectionViewCell.xib
@@ -19,27 +19,24 @@
                 <rect key="frame" x="0.0" y="0.0" width="149" height="141"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sRH-x6-ThU">
-                        <rect key="frame" x="7" y="7" width="135" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="comment" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vfm-LX-pQX">
-                        <rect key="frame" x="8" y="30" width="134" height="105"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vfm-LX-pQX">
+                        <rect key="frame" x="10" y="10" width="129" height="121"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </view>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="Vfm-LX-pQX" secondAttribute="trailing" constant="10" id="1Ii-1s-tgC"/>
+                <constraint firstItem="Vfm-LX-pQX" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="bmk-CT-oPm"/>
+                <constraint firstItem="Vfm-LX-pQX" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="vgv-Io-Jb7"/>
+                <constraint firstAttribute="bottom" secondItem="Vfm-LX-pQX" secondAttribute="bottom" constant="10" id="vq1-Ud-SRF"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="149" height="141"/>
             <connections>
                 <outlet property="nayamiComment" destination="Vfm-LX-pQX" id="iRR-kN-ZFH"/>
-                <outlet property="userName" destination="sRH-x6-ThU" id="xrm-nc-8yT"/>
             </connections>
             <point key="canvasLocation" x="14.5" y="36.5"/>
         </collectionViewCell>
